make-a-wish-salesforce/objects/Non_Wish_Events__c.object
<CustomObject>
    <description>It holds the Event details</description>
    <fields>
        <fullName>Chapter_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the value of the chapter role.</description>
        <label>Chapter Role</label>
        <referenceTo>Chapter_Role__c</referenceTo>
        <relationshipLabel>Non-Wish &amp; Events</relationshipLabel>
        <relationshipName>Non_Wish_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will define the location of the event</description>
        <label>Chapter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non-Wish &amp; Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>It will holds event city</description>
        <label>City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_The_Week__c</fullName>
        <description>It can contains more than one day value of the week</description>
        <label>Day of The Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used to store the description of the chapter role. This field is used as hidden field.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>It will holds the end time value of the event</description>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>It store the event date field</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Image__c</fullName>
        <description>It will hold the event related image.</description>
        <inlineHelpText>Optimal image size- width: 85px by height: 56px</inlineHelpText>
        <label>Event Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>It holds the name of the Event.</description>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Text__c</fullName>
        <description>It will hold the details about Event</description>
        <label>Event Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <description>This field is used to store URL value.</description>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Wish_Event_Title__c</fullName>
        <description>It will holds the Non wish/ event title value</description>
        <label>Non Wish/ Event Title</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>It will define the priority of the event.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>It will holds the event start time</description>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hour_Spent_Hidden__c</fullName>
        <description>This field is used to store the how many hours have spent for this Non Wish &amp; Event.</description>
        <label>Total Hour Spent Hidden</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hour_Spent__c</fullName>
        <description>This field is used to store the total time spent for volunteer to complete the Non-Wish &amp; Event.</description>
        <label>Total Hour Spent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Need__c</fullName>
        <label>Volunteer Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunity_Notes__c</fullName>
        <description>It will holds the Volunteer Opportunity Notes information</description>
        <label>Volunteer Opportunity Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip code value</description>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Non-Wish &amp; Events</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chapter__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Non_Wish_Event_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Arizona_Non_Wish_Events</fullName>
        <columns>NAME</columns>
        <columns>Chapter__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Event_Date__c</columns>
        <columns>End_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chapter__c</field>
            <operation>contains</operation>
            <value>Arizona</value>
        </filters>
        <label>Arizona - Non-Wish &amp; Events</label>
        <sharedTo>
            <group>Arizona</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Greater_Bay_Area_Non_Wish_Events</fullName>
        <columns>NAME</columns>
        <columns>Chapter__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Event_Date__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chapter__c</field>
            <operation>contains</operation>
            <value>Greater Bay Area</value>
        </filters>
        <label>Greater Bay Area - Non-Wish &amp; Events</label>
        <sharedTo>
            <group>Greater_Bay_Area</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Event-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Wish &amp; Events</pluralLabel>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <description>It will hold the Chapter Event details</description>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Wish</fullName>
        <active>true</active>
        <description>It will hold the non wish record details</description>
        <label>Non Wish</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>